--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "lg",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.16.3",
     "socket.io": "^2.2.0"
   }
